# SyncStream-Encrypted-Multi-Device-CCTV-Protocol

./: CMakeLists.txt  README.md
docs/: ADVANCED_LAYERS.md  MOBILE_INTEGRATION.md  PROD_BLUEPRINT.md  WSL_DEPLOYMENT.md
examples/: edge_hub_demo.cpp  mobile_bridge.cpp
include/syncstream/: edge_hub.hpp  keychain.hpp  middleware.hpp  secure_channel.hpp
src/: edge_hub.cpp  keychain.cpp  main.cpp  middleware.cpp  secure_channel.cpp
tests/: edge_hub_test.cpp  middleware_test.cpp  secure_channel_test.cpp
